package phonebook.phonebookfx;

public class Start {
    public static void main(String[] args) {
        App.main(args);
    }
}
